fix: make header on mobile correct size, add option to navigate to reader view for an item

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -13,7 +13,7 @@
 	border: 0 solid var(--mantine-color-gray-1);
 	border-bottom-width: 1px;
 	background-color: var(--mantine-color-gray-1);
-	height: 117px;
+	min-height: 117px;
 	display: flex;
 
 	@mixin dark {
